--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1831,9 +1831,9 @@ input, select, textarea {
 		-webkit-transition: border-color 0.2s ease;
 		-ms-transition: border-color 0.2s ease;
 		transition: border-color 0.2s ease;
-		background-color: transparent;
+		background-color: rgba(255, 255, 255, 0.3) !important;
 		border: solid 1px !important;
-		border-color: rgba(255, 255, 255, 0.15) !important;
+		border-color: rgba(255, 255, 255, 0.4) !important;
 		border-radius: 3em;
 		color: #ffffff !important;
 		cursor: pointer;
@@ -3874,10 +3874,11 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
-		background-position: top right;
+		background-image: url("images/Cornell_Univ_HighRes_NightFeel2.jpg");
+		background-position: top center;
 		background-repeat: no-repeat;
-		background-size: 100% 100%;
+		background-size: cover; /* Use 'cover' to ensure the background covers the entire element */
+    	position: relative; /* Necessary for absolutely positioned content */
 	}
 
 		#intro p {
