first draft of new index page

--- a/assets/css/main2024.css
+++ b/assets/css/main2024.css
@@ -3874,7 +3874,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/Princeton-nassaunight.jpeg");
+		background-image: url("images/Cornell_Univ_HighRes_NightFeel2.jpg");
 		background-position: top center;
 		background-repeat: no-repeat;
 		background-size: cover; /* Use 'cover' to ensure the background covers the entire element */
