--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3874,7 +3874,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/law-quad-02.jpg");
+		background-image: url("images/less_blurry.jpg");
 		background-position: top center;
 		background-repeat: no-repeat;
 		background-size: cover; /* Use 'cover' to ensure the background covers the entire element */
